# assignments

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  index.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: dev.yaml
['data/results/output/']/: .part-00000-8d121e15-e9b4-47ab-ac8a-25f6d2f95d4a-c000.txt.crc
['data/results/output/'][0]/: part-00000-625578fb-d247-44f5-abd6-2bf59bc9eda9-c000.txt
data/: HapMap_r23a_CEP_C13_AllSNPs.txt  HapMap_r23a_CEP_C14_AllSNPs.txt  HapMap_r23a_CEP_C15_AllSNPs.txt  HapMap_r23a_CEP_C16_AllSNPs.txt  HapMap_r23a_CEP_C1_AllSNPs.txt  HapMap_r23a_CEP_C2_AllSNPs.txt  textA.txt  textB.txt
data/reference/: HapMap_r23a_CEP_C15_AllSNPs.txt  HapMap_r23a_CEP_C16_AllSNPs.txt  HapMap_r23a_CEP_C2_AllSNPs.txt
src/: main.py
src/utils/: combine_df.py  custom_validations.py  error_handling.py  payload_validation_schema.py  slack_notification.py
test/: __init__.py
test/data/: test_payload.py
test/data/reference/: HapMap_r23a_CEP_C1_AllSNPs.txt
test/unit/: __init__.py  test_combine_df.py  test_custom_validations.py  test_error_handling.py  test_main.py  test_payload_validation_schema.py  test_slack_notification.py
utils/: combine_df.py  error_handling.py  payload_validation_schema.py  slack_notification.py
