[tool.poetry]
name = "uppsala-assignment"
version = "0.1"
description = "assignment"
authors = ["Nelly Nkonge <nkongenelly94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
spark = "^0.2.1"
pyspark = "3.1.3"
pandas = "1.5.3"
mock = "^5.0.1"
pytest = "^7.2.1"
coverage = "^7.1.0"
jsonschema = "^4.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
